--- a/Servers/Tomcat v9.0 Server at localhost-config/catalina.properties
+++ b/Servers/Tomcat v9.0 Server at localhost-config/catalina.properties
@@ -115,10 +115,9 @@ aspectj*.jar,\
 bootstrap.jar,\
 catalina-ant.jar,\
 catalina-ha.jar,\
-catalina-jmx-remote.jar,\
+catalina-ssi.jar,\
 catalina-storeconfig.jar,\
 catalina-tribes.jar,\
-catalina-ws.jar,\
 catalina.jar,\
 cglib-*.jar,\
 cobertura-*.jar,\
@@ -135,12 +134,14 @@ commons-lang*.jar,\
 commons-logging*.jar,\
 commons-math*.jar,\
 commons-pool*.jar,\
+derby-*.jar,\
 dom4j-*.jar,\
 easymock-*.jar,\
 ecj-*.jar,\
 el-api.jar,\
 geronimo-spec-jaxrpc*.jar,\
 h2*.jar,\
+ha-api-*.jar,\
 hamcrest-*.jar,\
 hibernate*.jar,\
 httpclient*.jar,\
@@ -150,6 +151,7 @@ jasper.jar,\
 jaspic-api.jar,\
 jaxb-*.jar,\
 jaxen-*.jar,\
+jaxws-rt-*.jar,\
 jdom-*.jar,\
 jetty-*.jar,\
 jmx-tools.jar,\
@@ -172,11 +174,7 @@ tagsoup-*.jar,\
 tomcat-api.jar,\
 tomcat-coyote.jar,\
 tomcat-dbcp.jar,\
-tomcat-i18n-en.jar,\
-tomcat-i18n-es.jar,\
-tomcat-i18n-fr.jar,\
-tomcat-i18n-ja.jar,\
-tomcat-i18n-ru.jar,\
+tomcat-i18n-*.jar,\
 tomcat-jdbc.jar,\
 tomcat-jni.jar,\
 tomcat-juli-adapters.jar,\
@@ -191,9 +189,7 @@ xercesImpl.jar,\
 xml-apis.jar,\
 xmlParserAPIs-*.jar,\
 xmlParserAPIs.jar,\
-xom-*.jar,\
-rt.jar,\
-spring-*.RELEASE.jar
+xom-*.jar
 
 # Default list of JAR files that should be scanned that overrides the default
 # jarsToSkip list above. This is typically used to include a specific JAR that
@@ -204,8 +200,7 @@ tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
 log4j-taglib*.jar,\
 log4j-web*.jar,\
 log4javascript*.jar,\
-slf4j-taglib*.jar\
-spring-webmvc-*.jar
+slf4j-taglib*.jar
 
 # String cache configuration.
 tomcat.util.buf.StringCache.byte.enabled=true
